--- a/APP/package.json
+++ b/APP/package.json
@@ -9,8 +9,8 @@
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "node": "16.13.1",
-    "npm": "8.1.2"
+    "node": "^16.13.1",
+    "npm": "^8.1.2"
   },
   "keywords": [],
   "author": "",
