--- a/APP/package.json
+++ b/APP/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "cd client-app && npm install && npm run build"
   },
   "engines": {
     "node": "^16.13.1",
