--- a/APP/package.json
+++ b/APP/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "heroku-postbuild": "cd client-app && npm install && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "engines": {
     "node": "16.13.1",
@@ -17,8 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
+    "consolidate": "^0.16.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "heroku-config": "^1.6.0",
+    "html": "^1.0.0",
+    "mustache": "^4.2.0",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
   },
